--- a/App/ClientApp/src/index.css
+++ b/App/ClientApp/src/index.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  @variants responsive {
+    .w-70 {
+      width: 14rem !important;
+    }
+
+    .right-30 {
+      right: 7.5rem;
+    }
+  }
+}
